--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://pam3ec555.github.io/find-meal-survey/",
   "name": "meal-app-survey",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "classnames": "^2.5.1",
+    "gh-pages": "^6.1.1",
     "posthog-js": "^1.131.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
