Fixed image error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pam3ec555.github.io/find-meal-survey/",
+  "homepage": "https://pam3ec555.github.io/find-meal-survey",
   "name": "meal-app-survey",
   "version": "0.1.0",
   "private": true,
