--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "posthog-js": "^1.131.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
